# AnimationProgramming

./: .gitmodules  CMakeLists.txt  README.md
AnimationProgramming/: CMakeLists.txt
AnimationProgramming/AnimationProgramming/: AnimClip.cpp  AnimClip.h  AnimationProgramming.cpp  AnimationProgramming.vcxproj  Animator.cpp  Animator.h  Bone.h  Engine.h  Skeleton.cpp  Skeleton.h
AnimationProgramming/AnimationProgramming/Debug/: vc142.idb
AnimationProgramming/AnimationProgramming/Debug/Animatio.551567FE.tlog/: AnimationProgramming.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
AnimationProgramming/AnimationProgramming/x64/Debug/: vc142.idb
AnimationProgramming/AnimationProgramming/x64/Debug/Animatio.551567FE.tlog/: AnimationProgramming.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
AnimationProgramming/CMake/: CMakeLists_sources.cmake
AnimationProgramming/Data/Resources/: skinning.vs
AnimationProgramming/Debug/: AnimationProgramming.ilk
AnimationProgramming/_scripts/: generate_cmake_sources.sh
libMaths/: .gitignore  CMakeLists.txt
libMaths/CMake/: CMakeLists_demo_sources.cmake  CMakeLists_sources.cmake  CMakeLists_test_sources.cmake  FindIrrKlang.cmake
libMaths/_scripts/: generate_cmake_demo_sources.sh  generate_cmake_sources.sh  generate_cmake_test_sources.sh
libMaths/libMaths/: CMakeLists.txt
libMaths/libMaths/CMake/: CMakeLists_sources.cmake
libMaths/libMaths/source/Core/: AngleDefine.h  CMath.cpp  CMath.h
libMaths/libMaths/source/Matrix/: Matrix2.cpp  Matrix2.h  Matrix4.cpp  Matrix4.h
libMaths/libMaths/source/Quaternion/: Quaternion.cpp  Quaternion.h
libMaths/libMaths/source/Vector/: Vector2.cpp  Vector2.h
libMaths/unitTest/: CMakeLists.txt
libMaths/unitTest/CMake/: CMakeLists_sources.cmake
libMaths/unitTest/_scripts/: generate_cmake_sources.sh
libMaths/unitTest/source/: Interpolation.cpp  Random.cpp  main.cpp
libMaths/unitTest/source/Algorithm/: CORDIC.cpp
libMaths/unitTest/source/Core/: Angle.cpp
libMaths/unitTest/source/Matrix/: Matrix3.cpp  Matrix4.cpp
libMaths/unitTest/source/Quaternion/: Quaternion.cpp
libMaths/unitTest/source/Vector/: Vector2.cpp  Vector3.cpp  Vector4.cpp
